# profile

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  operator.json
.beads/: beads.base.jsonl  issues.jsonl
.github/workflows/: ci.yml  homebrew.yml  release.yml
agent_ergonomics_audit/: README.md  phase0_skill_inventory.json
agent_ergonomics_audit/audit/: HANDOFF.md  ambition_bar_check.md  applied_changes.jsonl  intent_inference_corpus.jsonl  manifest.json  phase0_cli.json  playbook.md  recommendations.jsonl  scorecard_pass_1.md  surface_inventory.jsonl
docs/: PLAN.md
src/: doctor.rs  lib.rs  main.rs  paths.rs  slice.rs
src/cli/: args.rs  exit.rs
src/diff/: diff.rs  mod.rs
src/discovery/: emit.rs
src/draft/: init.rs  mod.rs  new.rs
src/freeze/: freeze.rs  mod.rs
src/lint/: lint.rs  mod.rs  validate.rs
src/network/: mod.rs  pull.rs  push.rs
src/output/: human.rs  json.rs  mod.rs  schema.rs
src/refusal/: codes.rs  mod.rs  payload.rs
src/resolve/: list.rs  mod.rs  resolver.rs  show.rs
src/schema/: canonical.rs  mod.rs  profile.rs  registry.rs  validate.rs
src/stats/: mod.rs  stats.rs  suggest_key.rs
src/witness/: append.rs  ledger.rs  mod.rs  query.rs  record.rs
tests/: describe.rs  diff.rs  discovery.rs  doctor.rs  draft_init.rs  draft_new.rs  freeze.rs  golden_rules.rs  lint.rs  list.rs  push_pull.rs  refusal.rs  show.rs  slice.rs  stats.rs  suggest_key.rs  validate.rs  witness.rs
tests/common/: mod.rs
tests/fixtures/: README.md
tests/fixtures/discovery/: bad_sliced_inconsistent.csv  gmail_sliced.csv  (+5 more)
(+32 files in other folders)
