[package]
name = "profile"
version = "0.1.0"
edition = "2024"
description = "Creates, validates, and freezes column-scoping profiles for report tools"
license = "MIT"
repository = "https://github.com/cmdrvl/profile"

[dependencies]
blake3 = "1.8.2"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.8"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
